--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 
         <!-- LOADING CSS -->
         <link href="stylesheets/reset.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="stylesheets/base.css" media="screen, projection" rel="stylesheet" type="text/css" />
     </head>
     <body>
 
+        <!-- main container div-->
+        <div class="container">
+
+        </div>
 
     </body>
 
