basic structure for the home page down

--- a/index.html
+++ b/index.html
@@ -34,18 +34,48 @@
                 </ul>
             </nav>
 
+            <!-- ///////////////////////// TODO ///////////////////////// -->
+            <!-- /// need to figure out how to do circular navigation /// -->
+            <!-- //////////////////////////////////////////////////////// -->
+
             <!-- each full width page -->
-            <section class="pages intro">
-
+            <section class="pages realize">
+                <div class="content">
+                    <div class="center">
+                        <h1>realize true potential through collaboration</h1>
+                        <div class="link"><a href=""> our approach </a></div>      
+                    </div>             
+                </div>
             </section>
-            <section class="pages distrubution">
 
+            <section class="pages distribution">
+                <div class="content">
+                    <div class="center">
+                        <h1>distribution without borders</h1>
+                        <h5> case study #1: columbia distributing </h5>
+                        <div class="link"><a href=""> our approach </a></div>      
+                    </div>             
+                </div>
             </section>
+
             <section class="pages logistics">
-
+                <div class="content">
+                    <div class="center">
+                        <h1>more than logistics</h1>
+                        <h5> case study #2: network global </h5>
+                        <div class="link"><a href=""> our approach </a></div>      
+                    </div>             
+                </div>
             </section>
-            <section class="pages grow">
 
+            <section class="pages grow">
+                <div class="content">
+                    <div class="center">
+                        <h1>all things healthy grow</h1>
+                        <h5> case study #3: new seasons market </h5>
+                        <div class="link"><a href=""> our approach </a></div>      
+                    </div>             
+                </div>
             </section>
 
             <!-- footer -->
