--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <!-- LOADING SCRIPTS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="js/vendors/restive.min.js"></script>
         <script>if (!window.jQuery) { document.write('<script src="js/vendors/jquery.min.js"><\/script>'); }</script>
 
         <!-- LOADING CSS -->
@@ -80,13 +81,30 @@
 
             <!-- footer -->
             <footer>
-                footer 
+                back to top 
             </footer>
         </div>
 
 
     </body>
 
+    <script>
+        $( document ).ready(function() {
+            $('body').restive({
+                breakpoints: ['240', '320', '480', '640', '720', '960', '1280'],
+                classes: ['240px', '320px', '480px', '640px', '720px', '960px', '1280px'],
+                turbo_classes: 'is_mobile=mobile,is_phone=phone,is_tablet=tablet,is_pc=pc',
+                force_dip: true
+            });
+        }); 
+                            //            $('body').restive({
+                            //                breakpoints: ['10000'],
+                            //                classes: ['restive'],
+                            //                turbo_classes: 'is_pc=pc,is_non_mobile=desktop,is_mobile=mobile,is_phone=phone, is_tablet=tablet,is_portrait=portrait,is_landscape=landscape', 
+                            //                force_dip: true
+                            //            });
+
+    </script>
     <!-- LOADING CUSTOM SCRIPTS -->
     <script src="js/init.js"></script>
 </html>
