working on responsiveness

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <ul>
                         <li><a href="pages/stories.html"> OUR STORIES </a></li>
                     </ul>
-                    <ul>
+                    <ul id="logo">
                         <li><a href="/"> LOGO </a></li>
                     </ul>
                     <ul>
@@ -75,7 +75,7 @@
                 <section class="pages realize">
                     <div class="content">
                         <div class="center">
-                            <h1>realize true potential through collaboration</h1>
+                            <p class="section-header">realize true potential through collaboration</p>
                             <div class="link"><a href=""> our approach </a></div>      
                         </div>             
                     </div>
