--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <!-- LOADING SCRIPTS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="js/vendors/restive.min.js"></script>
+        <script src="assets/js/vendors/restive.min.js"></script>
         <script>if (!window.jQuery) { document.write('<script src="js/vendors/jquery.min.js"><\/script>'); }</script>
 
         <!-- LOADING CSS -->
-        <link href="stylesheets/reset.css" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="stylesheets/base.css" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="stylesheets/menu.slide.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="assets/stylesheets/reset.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="assets/stylesheets/base.css" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="assets/stylesheets/menu.slide.css" media="screen, projection" rel="stylesheet" type="text/css" />
     </head>
     <body id="home">
 
@@ -57,7 +57,7 @@
                         <li><a href="pages/stories.html"> OUR STORIES </a></li>
                     </ul>
                     <ul id="logo">
-                        <li><a href="/"> LOGO </a></li>
+                        <li><a href="/"><img src="assets/images/logo.png"/></a></li>
                     </ul>
                     <ul>
                         <li><a href="pages/team.html"> OUR TEAM </a></li>
@@ -139,8 +139,8 @@
     </script>
 
     <!-- LOADING CUSTOM SCRIPTS -->
-    <script src="js/init.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/init.js"></script>
+    <script src="assets/js/classie.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </html>
