--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <section class="pages distribution">
                     <div class="content">
                         <div class="center">
-                            <h1>distribution without borders</h1>
-                            <h5> case study #1: columbia distributing </h5>
+                            <p class="section-header">distribution without borders</p>
+                            <p class="section-sub-header"> case study #1: columbia distributing </p>
                             <div class="link"><a href=""> our approach </a></div>      
                         </div>             
                     </div>
@@ -94,8 +94,8 @@
                 <section class="pages logistics">
                     <div class="content">
                         <div class="center">
-                            <h1>more than logistics</h1>
-                            <h5> case study #2: network global </h5>
+                            <p class="section-header">more than logistics</p>
+                            <p class="section-sub-header"> case study #2: network global </p>
                             <div class="link"><a href=""> our approach </a></div>      
                         </div>             
                     </div>
@@ -104,8 +104,8 @@
                 <section class="pages grow">
                     <div class="content">
                         <div class="center">
-                            <h1>all things healthy grow</h1>
-                            <h5> case study #3: new seasons market </h5>
+                            <p class="section-header">all things healthy grow</p>
+                            <p class="section-sub-header"> case study #3: new seasons market </p>
                             <div class="link"><a href=""> our approach </a></div>      
                         </div>             
                     </div>
