home page almost styled accordingly

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <script>
         $( document ).ready(function() {
             $('body').restive({
-                breakpoints: ['240', '320', '480', '640', '720', '960', '1280'],
-                classes: ['px-240', 'px-320', 'px-480', 'px-640', 'px-720', 'px-960', 'px-1280'],
+                breakpoints: ['240', '320', '480', '640', '720', '800', '960', '1280'],
+                classes: ['px-240', 'px-320', 'px-480', 'px-640', 'px-720', 'px-800', 'px-960', 'px-1280'],
                 turbo_classes: 'is_mobile=mobile,is_phone=phone,is_tablet=tablet,is_pc=pc',
                 force_dip: true
             });
